force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Health_Concerns_1__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Health_Concerns_1__c</fullName>
    <label>~USCDI v1 CCDA - Health Concerns 1</label>
    <type>TextArea</type>
</CustomField>