force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_History_and_Physical_Note__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_History_and_Physical_Note__c</fullName>
    <label>~USCDI v1 CCDA-History and Physical Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>