force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Mental_Status_1_Date__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Mental_Status_1_Date__c</fullName>
    <description>~USCDI v1 CCDA - Mental Status</description>
    <label>~USCDI v1 CCDA - Mental Status 1 Date</label>
    <type>Date</type>
</CustomField>