force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Mental_Status_1_Value__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Mental_Status_1_Value__c</fullName>
    <label>~USCDI v1 CCDA - Mental Status 1 Value</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amnesia</fullName>
            </value>
            <value>
                <fullName>Fever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>