force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Mental_Status_3_Date__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Mental_Status_3_Date__c</fullName>
    <label>~USCDI v1 CCDA - Mental Status 3 Date</label>
    <type>Date</type>
</CustomField>