force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Preventative_Health_ABC__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Preventative_Health_ABC__c</fullName>
    <label>~USCDI v1 CCDA - Preventative Health ABC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>