force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Reason_for_Referrals_1__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Reason_for_Referrals_1__c</fullName>
    <label>~USCDI v1 CCDA - Reason for Referrals 1</label>
    <type>TextArea</type>
</CustomField>