force-app/main/default/objects/USCDI__c/fields/Weight_for_Length__c.field-meta.xml
<CustomField>
    <fullName>Weight_for_Length__c</fullName>
    <description>~USCDI v1 CCDA - Pediatric Percentiles (NEW!)</description>
    <label>Weight for Length (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>